# Zink-Lang

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  name.txt
frontend/: CMakeLists.txt
frontend/source/: Token.cpp  Token.hpp  TokenType.hpp  scanner.cpp  scanner.hpp
frontend/source/utils/: keywords.cpp  keywords.hpp  object.cpp  object.hpp  scanner.hpp
src/: CMakeLists.txt  Main.cpp  Main.h  Zink.cpp  Zink.h  Zink.hpp
src/frontend/: scanner.cpp  scanner.h
src/vm/: ByteCodeInterpreter.cpp  ByteCodeInterpreter.h  Instruction.cpp  Instruction.h
